latencia_vs_throughput_optimizacion_sistemas.md